# wingstop-inventory-app

./: .gitmessage  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  TESTING_GUIDE.md  TESTING_README.md  WingstopInventoryApp.md  docker-compose.yml  docker-setup.ps1  generate-test-data.ps1  lint-and-format.ps1  package-lock.json  package.json  quality-check.ps1  setup-env.ps1  setup-pre-commit.ps1  test-all.ps1
backend/: .coverage  .dockerignore  .pre-commit-config.yaml  SECURITY.md  SECURITY_IMPLEMENTATION.md  alembic.ini  coverage.xml  create_initial_migration.ps1  env.example  init_roles.py  main.py  manage_database.ps1  manage_db.ps1  manage_security.ps1  pyproject.toml  requirements.txt  run_tests.ps1  setup-pip.ps1  setup.ps1  test.db  test_simple.py  validate_config.ps1  wingstop_inventory.db
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 15753c91c0b0_initial_migration_create_all_tables.py  add_color_to_category.py
backend/app/: __init__.py
backend/app/api/: __init__.py  auth.py  category.py  count.py  inventory_item.py  location.py  rbac.py  role.py  schedule.py  transfer.py  user.py
backend/app/core/: config.py  database.py  db_utils.py  dependencies.py  exceptions.py  logging.py  middleware.py  rbac.py  security.py
backend/app/models/: __init__.py  category.py  count.py  inventory_item.py  location.py  role.py  schedule.py  transfer.py  user.py
backend/app/schemas/: __init__.py  category.py  count.py  inventory_item.py  location.py  role.py  schedule.py  transfer.py  user.py
backend/tests/: __init__.py  conftest.py  test_api_categories.py  test_api_counts.py  test_api_inventory.py  test_api_users.py  test_security_utils.py
docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.frontend.prod  nginx.conf
frontend/: .dockerignore  .eslintrc.cjs  .prettierignore  .prettierrc  env.example  index.html  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
frontend/coverage/: clover.xml  coverage-final.json  index.html
frontend/coverage/frontend/: index.html  postcss.config.js.html  tailwind.config.js.html
frontend/src/: App.css  App.tsx
frontend/src/config/: index.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/docs/: ResponsiveDesign.md
frontend/src/hooks/: useApi.ts  useAuth.ts  useAuthState.ts  useForm.ts  usePermissions.ts  useResponsive.ts
frontend/src/pages/: ApiDemo.tsx  AuthDemo.tsx  Counts.tsx  Dashboard.tsx  FormDemo.tsx  Inventory.tsx  Login.tsx  NotFound.tsx  Register.tsx  Reports.tsx  ResponsiveDemo.tsx  RouteGuardDemo.tsx  Settings.tsx  TypesDemo.tsx  UIDemo.tsx
frontend/src/services/: api.ts  auth.ts  counts.ts  inventory.ts
frontend/src/stores/: authStore.ts  countsStore.ts  index.ts  inventoryStore.ts  settingsStore.ts  uiStore.ts
frontend/src/tests/: __init__.ts  setup.ts
frontend/src/types/: auth.ts  counts.ts  env.d.ts  index.ts  inventory.ts
tasks/: tasks-WingstopInventoryApp.md
(+108 files in other folders)
